fix css  in experience section

--- a/src/app/components/experience/experience.component.scss
+++ b/src/app/components/experience/experience.component.scss
@@ -261,13 +261,13 @@
         
         .achievement-chip {
           &.p-chip {
-            background: rgba(245, 158, 11, 0.1);
-            color: #f59e0b;
-            border: 1px solid rgba(245, 158, 11, 0.3);
+            background: #10b98123;
+            color: #10b981;
+            border: 1px solid rgba(16, 185, 129, 0.3);
             font-size: 0.85rem;
             
-            &.p-chip-icon {
-              color: #f59e0b;
+            & .p-chip-icon {
+              color: #10b981;
             }
           }
         }
